# digestify

./: DEVELOPMENT.md  README.md  compose.yaml  pyproject.toml
tests/: test_digestify.py
