[project]
name = "digestify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.9.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mypy>=1.0.1",
    "ruff>=0.14.1",
]

[tool.pytest.ini_options]
markers = [
  "integration: slow / costly tests",
]
addopts = [
  "--mypy",
  "-m", "not integration",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
